add notifier style

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/theming';
+@import "../node_modules/angular-notifier/styles.css";
 @include mat-core();
 
 /* You can add global styles to this file, and also import other style files */
