--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -8,6 +8,8 @@ form button{
     display:flex;
     justify-content: center;
     align-items: center;
+    padding:20px;
+    box-sizing: border-box;
 }
 
 .logo img{
